// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[` 2`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 20,
            },
            undefined,
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[` 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": undefined,
              "fontSize": 10,
            },
            undefined,
          ]
        }
      >
        Test label
      </Text>
    </View>
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[`Badge renders badge with borderStyle renders badge with circular borderStyle 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 10,
              "width": 10,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[`Badge renders badge with borderStyle renders badge with rectangular borderStyle 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[`Badge renders badge with borderStyle renders badge with rectangular borderStyle, small size 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 10,
              "width": 10,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[`Badge renders badge with different sizes renders badge with medium size 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;

exports[`Badge renders badge with different sizes renders badge with small size 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "height": 10,
      "justifyContent": "center",
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": undefined,
          "borderRadius": 50,
          "padding": 3,
          "position": "absolute",
          "zIndex": 10,
        },
        {
          "bottom": 0,
          "right": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          [
            {
              "height": 10,
              "width": 10,
            },
            {
              "backgroundColor": undefined,
              "borderRadius": 50,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
  />
</View>
`;
